# blurt

./: .env.example  .gitignore  README.md  idea.md  pyproject.toml  pyrightconfig.json  seed-full-frontend.yaml  seed-persistence-ui.yaml  seed.yaml
.playwright-cli/: page-2026-03-14T19-55-48-610Z.yml  page-2026-03-14T19-56-11-007Z.yml  page-2026-03-14T19-56-26-706Z.yml  page-2026-03-14T19-57-18-757Z.yml  page-2026-03-14T19-57-25-132Z.yml
blurt/: __init__.py
blurt/api/: capture.py  classify.py  clear_state.py  episodes.py  google_calendar_routes.py  patterns.py  question.py  recall.py  rhythms.py  task_feedback.py  task_surfacing.py  temporal_activity.py
blurt/audio/: __init__.py  buffer.py  chunker.py  connection_registry.py  models.py  pipeline.py  session_manager.py  websocket_handler.py
blurt/classification/: __init__.py  adapter.py  classifier.py  models.py  pipeline.py
blurt/clients/: __init__.py  embeddings.py  gemini.py  local_llm.py
blurt/config/: __init__.py  settings.py
blurt/core/: __init__.py  app.py  config.py  encrypted_storage.py  encryption.py  entity_extractor.py  key_management.py  models.py
blurt/extraction/: __init__.py  entities.py
blurt/gemini/: __init__.py  audio_client.py
blurt/local/: __init__.py  classifier.py  extractor.py  storage.py
blurt/memory/: __init__.py  episodic.py  graph_store.py  observation.py  semantic.py  working.py
blurt/middleware/: __init__.py  egress_guard.py
blurt/models/: __init__.py  audio.py  emotions.py  (+3 more)
frontend/: index.html  package-lock.json  package.json  vite.config.js
tests/: __init__.py
(+306 files in other folders)
